--- a/source/_posts/tech/architecture/2017-01-16-jmh.md
+++ b/source/_posts/tech/architecture/2017-01-16-jmh.md
@@ -10,6 +10,14 @@ published: false
 
 ---
 
+
+JMH supports the following Benchmark modes:
+
+Throughput: operations per unit of time
+AverageTime: average time per operation
+SampleTime: samples the time for each operation
+SingleShotTime: measures the time for a single operation
+
 # 什么是基准测试
 
 # 什么是微基准测试
@@ -303,14 +311,12 @@ Things are getting more complicated in case of a method returning a single value
 private double x = Math.PI;
 
 @Benchmark
-public double testWrong()
-{
+public double testWrong(){
     return Math.sin( Math.PI );
 }
 
 @Benchmark
-public double testRight()
-{
+public double testRight(){
     return Math.sin( x );
 }
 ```
