--- a/source/_posts/manual/2017-07-27-redis.md
+++ b/source/_posts/manual/2017-07-27-redis.md
@@ -39,7 +39,38 @@ published: false
 
 ### Windows
 
+从如下路径下载msi安装包安装或zip包解压即可
+
+```
+https://github.com/MicrosoftArchive/redis/releases
+```
+
 ### Linux
+
+通过下面的命令下载，并解压Redis:
+
+```
+$ wget http://download.redis.io/releases/redis-4.0.1.tar.gz
+$ tar xzf redis-4.0.1.tar.gz
+$ cd redis-4.0.1
+$ make
+```
+
+可执行程序在src目录下，通过如下命令启动Redis:
+
+```
+$ src/redis-server
+```
+
+通过redis-cli命令启动客户端，进行交互式测试:
+
+```
+$ src/redis-cli
+redis> set foo bar
+OK
+redis> get foo
+"bar"
+```
 
 ## Redis数据结构
 
@@ -50,6 +81,35 @@ published: false
 ### Hash
 
 ## 各数据结构的操作
+
+#### String
+
+| Command                                  | desc                                     | example              | result        |
+| ---------------------------------------- | ---------------------------------------- | -------------------- | ------------- |
+| **SET** key value \[EX seconds\] \[PX milliseconds\] \[NX\|XX] | Set the string value of a key            | set num 10           | OK            |
+| **SETEX** key seconds value              | Set the value and expiration of a key    | set a 10 1 (超时时间10s) | OK            |
+| **SETNX** key value                      | Set the value of a key, only if the key does not exist | setnx b 2            | 设置成功返回1，否则返回0 |
+| **GET** key                              | Get the value of a key                   | get num              | 10            |
+| **INCR** key                             | Increment the integer value of a key by one | incr num             | 11            |
+| **INCRBY** key increment                 | Increment the integer value of a key by the given amount | incrby num 10        | 21            |
+| **INCRBYFLOAT** key increment            | Increment the float value of a key by the given amount | incrbyfloat num 0.5  | 22(执行两次)      |
+| **DECR** key                             | Decrement the integer value of a key by one | decr num             | 21            |
+| **DECRBY** key decrement                 | Decrement the integer value of a key by the given number |                      |               |
+| **APPEND** key value                     | Append a value to a key                  |                      |               |
+| **STRLEN** key                           | Get the length of the value stored in a key |                      |               |
+| **MSET** key value [key value ...]       | Set multiple keys to multiple values     |                      |               |
+| **MGET** key [key ...]                   | Get the values of all the given keys     |                      |               |
+| **BITCOUNT** key [start end]             | Count set bits in a string               |                      |               |
+| **BITFIELD** key \[GET type offset] \[SET type offset value] \[INCRBY type offset increment] \[OVERFLOW WRAP \| SAT\| FAIL] | Perform arbitrary bitfield integer operations on strings |                      |               |
+| **BITOP** operation destkey key [key ...] | Perform bitwise operations between strings |                      |               |
+| **BITPOS** key bit \[start] \[end]       | Find first bit set or clear in a string  |                      |               |
+| **GETBIT** key offset                    | Returns the bit value at offset in the string value stored at key |                      |               |
+| **GETRANGE** key start end               | Get a substring of the string stored at a key |                      |               |
+| **GETSET** key value                     | Set the string value of a key and return its old value |                      |               |
+| **MSETNX** key value [key value ...]     | Set multiple keys to multiple values, only if none of the keys exist |                      |               |
+| **PSETEX** key milliseconds value        | Set the value and expiration in milliseconds of a key |                      |               |
+| **SETBIT** key offset value              | Sets or clears the bit at offset in the string value stored at key |                      |               |
+| **SETRANGE** key offset value            | Overwrite part of a string at key starting at the specified offset |                      |               |
 
 ## Redis功能
 
