--- a/source/_posts/manual/2017-07-27-redis.md
+++ b/source/_posts/manual/2017-07-27-redis.md
@@ -25,13 +25,13 @@ published: false
 
 
 
-| Name  | Type | Data storage options | Query types | Additional features |
-| ----- | ---- | -------------------- | ----------- | ------------------- |
-| Redis |      |                      |             |                     |
-|       |      |                      |             |                     |
-|       |      |                      |             |                     |
-|       |      |                      |             |                     |
-|       |      |                      |             |                     |
+| Name       | Type                                  | Data storage options                     | Query types                              | Additional features                      |
+| ---------- | ------------------------------------- | ---------------------------------------- | ---------------------------------------- | ---------------------------------------- |
+| Redis      | In-memory non-relational database     | Strings, lists, sets,hashes, sorted sets | Commands for each data type for common access patterns, with bulk operations, and partial transaction support | Publish/Subscribe,master/slave replication,disk persistence,scripting (stored procedures) |
+| memcached  | In-memory key-value cache             | Mapping of keys to values                | Commands for create,read, update, delete,and a few others | Multithreaded serverfor additional performance |
+| MySQL      | Relational database                   | Databases of tables of rows, views over tables, spatial and third-party extensions | SELECT, INSERT, UPDATE, DELETE,functions, stored procedures | ACID compliant (with InnoDB), master/slave and master/master replication |
+| PostgreSQL | Relational database                   | Databases of tables of rows, views over tables, spatial and third-party extensions, customizable types | SELECT, INSERT, UPDATE, DELETE, built-in functions, custom stored procedures | ACID compliant, master/slave replication, multi-master replication (third party) |
+| MongoDB    | On-disk non-relational document store | Databases of tables of schema-less BSON documents | Commands for create,read, update, delete,conditional queries,and more | Supports map-reduce operations, master/slave replication, sharding,spatial indexes |
 
 
 
@@ -74,42 +74,136 @@ redis> get foo
 
 ## Redis数据结构
 
-### String
-### List
-### Set
-### Zset
-### Hash
+| Structure type | What it contains                         | Structure read/write ability             |
+| -------------- | ---------------------------------------- | ---------------------------------------- |
+| String         | Strings, integers, or floating-point values | Operate on the whole string, parts, increment/decrement the integers and floats |
+| List           | Linked list of strings                   | Push or pop items from both ends, trim based on offsets, read individual or multiple items, find or remove items by value |
+| Set            | Unordered collection of unique strings   | Add, fetch, or remove individual items, check membership, intersect, union, difference, fetch random items |
+| ZSet           | Ordered mapping of string members to floating-point scores, ordered by score | Add, fetch, or remove individual values, fetch items based on score ranges or member value |
+| Hash           | Unordered hash table of keys to values   | Add, fetch, or remove individual items, fetch the whole hash |
+
+
 
 ## 各数据结构的操作
 
 #### String
 
-| Command                                  | desc                                     | example              | result        |
-| ---------------------------------------- | ---------------------------------------- | -------------------- | ------------- |
-| **SET** key value \[EX seconds\] \[PX milliseconds\] \[NX\|XX] | Set the string value of a key            | set num 10           | OK            |
-| **SETEX** key seconds value              | Set the value and expiration of a key    | set a 10 1 (超时时间10s) | OK            |
-| **SETNX** key value                      | Set the value of a key, only if the key does not exist | setnx b 2            | 设置成功返回1，否则返回0 |
-| **GET** key                              | Get the value of a key                   | get num              | 10            |
-| **INCR** key                             | Increment the integer value of a key by one | incr num             | 11            |
-| **INCRBY** key increment                 | Increment the integer value of a key by the given amount | incrby num 10        | 21            |
-| **INCRBYFLOAT** key increment            | Increment the float value of a key by the given amount | incrbyfloat num 0.5  | 22(执行两次)      |
-| **DECR** key                             | Decrement the integer value of a key by one | decr num             | 21            |
-| **DECRBY** key decrement                 | Decrement the integer value of a key by the given number |                      |               |
-| **APPEND** key value                     | Append a value to a key                  |                      |               |
-| **STRLEN** key                           | Get the length of the value stored in a key |                      |               |
-| **MSET** key value [key value ...]       | Set multiple keys to multiple values     |                      |               |
-| **MGET** key [key ...]                   | Get the values of all the given keys     |                      |               |
-| **BITCOUNT** key [start end]             | Count set bits in a string               |                      |               |
-| **BITFIELD** key \[GET type offset] \[SET type offset value] \[INCRBY type offset increment] \[OVERFLOW WRAP \| SAT\| FAIL] | Perform arbitrary bitfield integer operations on strings |                      |               |
-| **BITOP** operation destkey key [key ...] | Perform bitwise operations between strings |                      |               |
-| **BITPOS** key bit \[start] \[end]       | Find first bit set or clear in a string  |                      |               |
-| **GETBIT** key offset                    | Returns the bit value at offset in the string value stored at key |                      |               |
-| **GETRANGE** key start end               | Get a substring of the string stored at a key |                      |               |
-| **GETSET** key value                     | Set the string value of a key and return its old value |                      |               |
-| **MSETNX** key value [key value ...]     | Set multiple keys to multiple values, only if none of the keys exist |                      |               |
-| **PSETEX** key milliseconds value        | Set the value and expiration in milliseconds of a key |                      |               |
-| **SETBIT** key offset value              | Sets or clears the bit at offset in the string value stored at key |                      |               |
-| **SETRANGE** key offset value            | Overwrite part of a string at key starting at the specified offset |                      |               |
+| Command                                  | desc                                     | example                                  | result                  |
+| ---------------------------------------- | ---------------------------------------- | ---------------------------------------- | ----------------------- |
+| **SET** key value \[EX seconds\] \[PX milliseconds\] \[NX\|XX] | Set the string value of a key            | set num 10                               | OK                      |
+| **SETEX** key seconds value              | Set the value and expiration of a key    | set a 10 1 (超时时间10s)                     | OK                      |
+| **PSETEX** key milliseconds value        | Set the value and expiration in milliseconds of a key | set a 10000 1(超时10s)                     | OK                      |
+| **SETNX** key value                      | Set the value of a key, only if the key does not exist | setnx b 2                                | 设置成功返回1，否则返回0           |
+| **GET** key                              | Get the value of a key                   | get num                                  | 10                      |
+| **INCR** key                             | Increment the integer value of a key by one | incr num                                 | 11                      |
+| **INCRBY** key increment                 | Increment the integer value of a key by the given amount | incrby num 10                            | 21                      |
+| **INCRBYFLOAT** key increment            | Increment the float value of a key by the given amount | incrbyfloat num 0.5                      | 22(执行两次)                |
+| **DECR** key                             | Decrement the integer value of a key by one | decr num                                 | 21                      |
+| **DECRBY** key decrement                 | Decrement the integer value of a key by the given number | decrby num 10                            | 11                      |
+| **APPEND** key value                     | Append a value to a key                  | append num 1                             | "111"                   |
+| **STRLEN** key                           | Get the length of the value stored in a key | strlen num                               | 3                       |
+| **MSET** key value [key value ...]       | Set multiple keys to multiple values     | mset a 1 b 2                             | OK                      |
+| **MGET** key [key ...]                   | Get the values of all the given keys     | mget a b                                 | 1 2                     |
+| **SETBIT** key offset value              | Sets or clears the bit at offset in the string value stored at key | setbit s 2 1                             | 0                       |
+| **GETBIT** key offset                    | Returns the bit value at offset in the string value stored at key | getbit s 2                               | 1                       |
+| **MSETNX** key value [key value ...]     | Set multiple keys to multiple values, only if none of the keys exist | msetnx aa 1 bb 2                         | 设置成功返回1，否则返回0(有一个失败即失败) |
+| **BITCOUNT** key [start end]             | Count set bits in a string(统计bit位上1的数量)  | bitcount s                               | 1(按byte偏移)              |
+| **BITPOS** key bit \[start] \[end]       | Find first bit set or clear in a string  | bitpos s 1                               | 2                       |
+| **BITOP** operation destkey key [key ...] | Perform bitwise operations between strings(AND,OR,XOR,NOT) | bitset ss 1 1;bitop OR t s ss;           | s与ss做位或运算，得到t           |
+| **BITFIELD** key \[GET type offset] \[SET type offset value] \[INCRBY type offset increment] \[OVERFLOW WRAP \| SAT\| FAIL] | Perform arbitrary bitfield integer operations on strings(WRAP一个i8的整数，值为127，递增1会导致值变为-128;SAT一个i8的整数，值为120，递增10会导致值变为127;FAIL发生溢出时操作失败；) | BITFIELD bitkey SET i4 0 5(用bitkey的值，0-3位保存有符号整数值5。i4代表4位有符号整数，u4代表4位无符号整数。) | 0                       |
+| **SETRANGE** key offset value            | Overwrite part of a string at key starting at the specified offset | setrange str 0 "s"                       | "s"                     |
+| **GETRANGE** key start end               | Get a substring of the string stored at a key | getrange str 0 0                         | "s"                     |
+| **GETSET** key value                     | Set the string value of a key and return its old value | getset num "hello"                       | "111"                   |
+
+
+
+#### List
+
+| Command                                | desc                                     | example              | result             |
+| -------------------------------------- | ---------------------------------------- | -------------------- | ------------------ |
+| LPUSH key value [value ...]            | Prepend one or multiple values to a list | lpush l 1 2 3        | 3[1 2 3]           |
+| LPUSHX key value                       | Prepend a value to a list, only if the list exists | lpush l 1            | 4[1 1 2 3]         |
+| RPUSH key value [value ...]            | Append one or multiple values to a list  | rpush l 1 2 3        | 7[1 1 2 3 1 2 3]   |
+| RPUSHX key value                       | Append a value to a list, only if the list exists | rpushx l 1           | 8[1 1 2 3 1 2 3 1] |
+| LPOP key                               | Remove and get the first element in a list | lpop l               | 1[1 2 3 1 2 3 1]   |
+| RPOP key                               | Remove and get the last element in a list | rpop l               | 1[1 2 3 1 2 3]     |
+| LSET key index value                   | Set the value of an element in a list by its index | lset l 0 3           | OK[3 2 3 1 2 3]    |
+| RPOPLPUSH source destination           | Remove the last element in a list, prepend it to another list and return it | rpoplpush l a        | "3"[3 2 3 1 2]     |
+| BLPOP key [key ...] timeout            | Remove and get the first element in a list, or block until one is available | blpop l 1            | 3[2 3 1 2]         |
+| BRPOP key [key ...] timeout            | Remove and get the last element in a list, or block until one is available | brpop l 1            | 2[2 3 1]           |
+| LREM key count value                   | Remove elements from a list.count > 0: Remove elements equal to value moving from head to tail.count < 0: Remove elements equal to value moving from tail to head.count = 0: Remove all elements equal to value. | lrem l 0 1           | 1[2 3]             |
+| LINDEX key index                       | Get an element from a list by its index  | lindex l 2           | 0[2 3]             |
+| LTRIM key start stop                   | Trim a list to the specified range       | ltrim l 0 0          | 1[2]               |
+| LINSERT key BEFORE\| AFTER pivot value | Insert an element before or after another element in a list | linsert l before 2 1 | 2[1 2]             |
+| LLEN key                               | Get the length of a list                 | llen l               | 2                  |
+| LRANGE key start stop                  | Get a range of elements from a list      | lrange l 0  1        | 1 2                |
+| BRPOPLPUSH source destination timeout  | Pop a value from a list, push it to another list and return it; or block until one is available | brpoplpush l a 1     | 2[1]               |
+
+#### Set
+
+| Command                                  | desc                                     | example | result |
+| ---------------------------------------- | ---------------------------------------- | ------- | ------ |
+| SADD key member [member ...]             | Add one or more members to a set         |         |        |
+| SCARD key                                | Get the number of members in a set       |         |        |
+| SDIFF key [key ...]                      | Subtract multiple sets                   |         |        |
+| SDIFFSTORE destination key [key ...]     | Subtract multiple sets and store the resulting set in a key |         |        |
+| SINTER key [key ...]                     | Intersect multiple sets                  |         |        |
+| SINTERSTORE destination key [key ...]    | Intersect multiple sets and store the resulting set in a key |         |        |
+| SISMEMBER key member                     | Determine if a given value is a member of a set |         |        |
+| SMEMBERS key                             | Get all the members in a set             |         |        |
+| SMOVE source destination member          | Move a member from one set to another    |         |        |
+| SPOP key [count]                         | Remove and return one or multiple random members from a set |         |        |
+| SRANDMEMBER key [count]                  | Get one or multiple random members from a set |         |        |
+| SREM key member [member ...]             | Remove one or more members from a set    |         |        |
+| SUNION key [key ...]                     | Add multiple sets                        |         |        |
+| SUNIONSTORE destination key [key ...]    | Add multiple sets and store the resulting set in a key |         |        |
+| SSCAN key cursor \[MATCH pattern] \[COUNT count] | Incrementally iterate Set elements       |         |        |
+
+#### ZSet
+
+| Command                                  | desc                                     | example | result |
+| ---------------------------------------- | ---------------------------------------- | ------- | ------ |
+| ZADD key \[NX\|XX]\[CH] \[INCR] score member \[score member ...] | Add one or more members to a sorted set, or update its score if it already exists |         |        |
+| ZCARD key                                | Get the number of members in a sorted set |         |        |
+| ZCOUNT key min max                       | Count the members in a sorted set with scores within the given values |         |        |
+| ZINCRBY key increment member             | Increment the score of a member in a sorted set |         |        |
+| ZINTERSTORE destination numkeys key \[key ...] \[WEIGHTS weight \[weight ...]] [AGGREGATE SUM\|MIN\|MAX] | Intersect multiple sorted sets and store the resulting sorted set in a new key |         |        |
+| ZLEXCOUNT key min max                    | Count the number of members in a sorted set between a given lexicographical range |         |        |
+| ZRANGE key start stop [WITHSCORES]       | Return a range of members in a sorted set, by index |         |        |
+| ZRANGEBYLEX key min max [LIMIT offset count] | Return a range of members in a sorted set, by lexicographical range |         |        |
+| ZREVRANGEBYLEX key max min [LIMIT offset count] | Return a range of members in a sorted set, by lexicographical range, ordered from higher to lower strings. |         |        |
+| ZRANGEBYSCORE key min max \[WITHSCORES] \[LIMIT offset count] | Return a range of members in a sorted set, by score |         |        |
+| ZRANK key member                         | Determine the index of a member in a sorted set |         |        |
+| ZREM key member [member ...]             | Remove one or more members from a sorted set |         |        |
+| ZREMRANGEBYLEX key min max               | Remove all members in a sorted set between the given lexicographical range |         |        |
+| ZREMRANGEBYRANK key start stop           | Remove all members in a sorted set within the given indexes |         |        |
+| ZREMRANGEBYSCORE key min max             | Remove all members in a sorted set within the given scores |         |        |
+| ZREVRANGE key start stop [WITHSCORES]    | Return a range of members in a sorted set, by index, with scores ordered from high to low |         |        |
+| ZREVRANGEBYSCORE key max min \[WITHSCORES] \[LIMIT offset count] | Return a range of members in a sorted set, by score, with scores ordered from high to low |         |        |
+| ZREVRANK key member                      | Determine the index of a member in a sorted set, with scores ordered from high to low |         |        |
+| ZSCORE key member                        | Get the score associated with the given member in a sorted set |         |        |
+| ZUNIONSTORE destination numkeys key \[key ...] \[WEIGHTS weight \[weight ...]] [AGGREGATE SUM\|MIN\|MAX] | Add multiple sorted sets and store the resulting sorted set in a new key |         |        |
+| ZSCAN key cursor \[MATCH pattern] \[COUNT count] | Incrementally iterate sorted sets elements and associated scores |         |        |
+
+#### Hash
+
+| Command                                  | desc                                     | example | result |
+| ---------------------------------------- | ---------------------------------------- | ------- | ------ |
+| HDEL key field [field ...]               | Delete one or more hash fields           |         |        |
+| HEXISTS key field                        | Determine if a hash field exists         |         |        |
+| HGET key field                           | Get the value of a hash field            |         |        |
+| HGETALL key                              | Get all the fields and values in a hash  |         |        |
+| HINCRBY key field increment              | Increment the integer value of a hash field by the given number |         |        |
+| HINCRBYFLOAT key field increment         | Increment the float value of a hash field by the given amount |         |        |
+| HKEYS key                                | Get all the fields in a hash             |         |        |
+| HLEN key                                 | Get the number of fields in a hash       |         |        |
+| HMGET key field [field ...]              | Get the values of all the given hash fields |         |        |
+| HMSET key field value [field value ...]  | Set multiple hash fields to multiple values |         |        |
+| HSET key field value                     | Set the string value of a hash field     |         |        |
+| HSETNX key field value                   | Set the value of a hash field, only if the field does not exist |         |        |
+| HSTRLEN key field                        | Get the length of the value of a hash field |         |        |
+| HVALS key                                | Get all the values in a hash             |         |        |
+| HSCAN key cursor \[MATCH pattern] \[COUNT count] | Incrementally iterate hash fields and associated values |         |        |
 
 ## Redis功能
 
